--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
@@ -11,6 +11,19 @@
   <h1>Занятие 1. Вводное</h1>
   <p>Конспект видео от 2024.09.14</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/549478" target="_blank">Codeforces Контест 549478</a></p>
+<pre>
+// ускорение ввода-вывода
+ios_base::sync_with_stdio(false);
+cin.tie(nullptr);
+cout.tie(nullptr);
+</pre>
+<pre>
+// условная компиляций
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+</pre>
 </article>
 
 
