--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
@@ -1159,10 +1159,10 @@ int main() {
 </article>
 
 
-<!-- Задача K. Счастливый -->
+<!-- Задача K. Счастливый? -->
 <article class="article">
   <div class="anchor" id="task11"></div>
-  <h3>Задача K. Счастливый</h3>
+  <h3>Задача K. Счастливый?</h3>
 
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
