--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250624-Blitz1.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250624-Blitz1.html
@@ -6,7 +6,7 @@
 
 
 <article class="article">
-  <h1>2024-2025 Летний блиц 1 (вариант экзамена 1 курс)</h1>
+  <h1>Летний блиц 1 2025 (вариант экзамена 1 курс)</h1>
   <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contest/614554" target="_blank">Codeforces Контест 614554 2025-06-24</a></p>
 </article>
 
@@ -15,14 +15,12 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Короткая сортировка</a>
-    <br><a href="#task2">Задача B. Хороший ребенок</a>
-    <br><a href="#task3">Задача C. Стрельба по мишени</a>
-    <br><a href="#task4">Задача D. To My Critics</a>
-    <br><a href="#task5">Задача E. Десять слов мудрости</a>
-    <br><a href="#task6">Задача F. Слово на бумаге</a>
-  </p>
+      <a href="#task1">Задача A. Короткая сортировка</a>
+  <br><a href="#task2">Задача B. Хороший ребенок</a>
+  <br><a href="#task3">Задача C. Стрельба по мишени</a>
+  <br><a href="#task4">Задача D. To My Critics</a>
+  <br><a href="#task5">Задача E. Десять слов мудрости</a>
+  <br><a href="#task6">Задача F. Слово на бумаге</a>
 </article>
 
 
