--- a/src/components/alg/alg-pract/codeforces/pages/elem-111202-Round3.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-111202-Round3.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/134" target="_blank">Codeforces Testing Round 3 2011-12-02</a></p>
+  <a href="https://codeforces.com/contest/134" target="_blank">Codeforces Testing Round 3 2011-12-02</a>
 </article>
 
 
@@ -7,11 +7,9 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Среднестатистические элементы</a>
-    <br><a href="#task2">Задача B. Пары чисел</a>
-    <br><a href="#task3">Задача C. Обмены</a>
-  </p>
+      <a href="#task1">Задача A. Среднестатистические элементы</a>
+  <br><a href="#task2">Задача B. Пары чисел</a>
+  <br><a href="#task3">Задача C. Обмены</a>
 </article>
 
 
