--- a/src/components/alg/alg-pract/codeforces/pages/elem-130530-Round186.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-130530-Round186.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/313" target="_blank">Codeforces Round 186 (Div. 2) 2013-05-30</a></p>
+  <a href="https://codeforces.com/contest/313" target="_blank">Codeforces Round 186 (Div. 2) 2013-05-30</a>
 </article>
 
 
@@ -7,13 +7,11 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Илья и банковский счет</a>
-    <br><a href="#task2">Задача B. Илья и запросы</a>
-    <br><a href="#task3">Задача C. Илья и матрица</a>
-    <br><a href="#task4">Задача D. Илья и дороги</a>
-    <br><a href="#task5">Задача E. Илья и два числа</a>
-  </p>
+      <a href="#task1">Задача A. Илья и банковский счет</a>
+  <br><a href="#task2">Задача B. Илья и запросы</a>
+  <br><a href="#task3">Задача C. Илья и матрица</a>
+  <br><a href="#task4">Задача D. Илья и дороги</a>
+  <br><a href="#task5">Задача E. Илья и два числа</a>
 </article>
 
 
