--- a/src/components/alg/alg-pract/codeforces/pages/elem-220206-Round770.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220206-Round770.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/1634" target="_blank">Codeforces Round 770 (Div. 2) 2022-02-06</a></p>
+  <a href="https://codeforces.com/contest/1634" target="_blank">Codeforces Round 770 (Div. 2) 2022-02-06</a>
 </article>
 
 
@@ -7,14 +7,12 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Разворачивай и конкатенируй</a>
-    <br><a href="#task2">Задача B. Гадание на массиве</a>
-    <br><a href="#task3">Задача C. ОКЕЯ</a>
-    <br><a href="#task4">Задача D. В поисках нуля</a>
-    <br><a href="#task5">Задача E. Честный делёж</a>
-    <br><a href="#task6">Задача F. Прибавления Фибоначчи</a>
-  </p>
+      <a href="#task1">Задача A. Разворачивай и конкатенируй</a>
+  <br><a href="#task2">Задача B. Гадание на массиве</a>
+  <br><a href="#task3">Задача C. ОКЕЯ</a>
+  <br><a href="#task4">Задача D. В поисках нуля</a>
+  <br><a href="#task5">Задача E. Честный делёж</a>
+  <br><a href="#task6">Задача F. Прибавления Фибоначчи</a>
 </article>
 
 
