--- a/src/components/alg/alg-pract/codeforces/pages/elem-230326-Round860.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230326-Round860.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/1798" target="_blank">Codeforces Round 860 (Div. 2) 2023-03-26</a></p>
+  <a href="https://codeforces.com/contest/1798" target="_blank">Codeforces Round 860 (Div. 2) 2023-03-26</a>
 </article>
 
 
@@ -7,14 +7,12 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Гвоздь программы</a>
-    <br><a href="#task2">Задача B. Три семёрки</a>
-    <br><a href="#task3">Задача C. Магазин сладостей</a>
-    <br><a href="#task4">Задача D. Шокирующая расстановка</a>
-    <br><a href="#task5">Задача E. Генератор мультитестов</a>
-    <br><a href="#task6">Задача F. Подарки от Деда Ахмеда</a>
-  </p>
+      <a href="#task1">Задача A. Гвоздь программы</a>
+  <br><a href="#task2">Задача B. Три семёрки</a>
+  <br><a href="#task3">Задача C. Магазин сладостей</a>
+  <br><a href="#task4">Задача D. Шокирующая расстановка</a>
+  <br><a href="#task5">Задача E. Генератор мультитестов</a>
+  <br><a href="#task6">Задача F. Подарки от Деда Ахмеда</a>
 </article>
 
 
@@ -91,6 +89,56 @@ No
   <p>Во втором наборе входных данных можно показать, что выполнить условия невозможно.</p>
   <p>В третьем наборе входных данных можно поменять местами числа a1 и b1, после чего массив a станет равным [99,99], а массив b станет равным [100,100] и оба условия будут выполнены.</p>
   <p>В пятом наборе входных данных можно поменять местами a7 и b7 , a8 и b8, a9 и b9, после чего массив a станет равным [1,2,3,4,5,6,6,6,6], а массив b станет равным [9,9,9,9,9,9,7,8,9] и оба условия будут выполнены.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n; // размер массива
+    cin >> n;
+    vector&lt;int&gt; A(n); // первый массив
+    for (int i = 0; i &lt; n; i++) {
+      cin >> A[i];
+    }
+    vector&lt;int&gt; B(n); // второй массив
+    for (int i = 0; i &lt; n; i++) {
+      cin >> B[i];
+    }
+
+    // решение
+    string res = "YES";
+    // максимальный последний элемент
+    int max_last = max(A[n - 1], B[n - 1]);
+    // минимальный последний элемент
+    int min_last = min(A[n - 1], B[n - 1]);
+    for (int i = 0; i &lt; n - 1; i++) {
+      // максимальный текущий элемент
+      int maxi = max(A[i], B[i]);
+      // минимальный текущий элемент
+      int mini = min(A[i], B[i]);
+      if (maxi > max_last || mini > min_last) {
+        res = "NO";
+      }
+    }
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -102,29 +150,29 @@ No
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Лотерея «Три Семёрки» проводилась m дней. В день i в лотерее участвовали ni людей с номерами ai,1,…,ai,ni.</p>
+  <p>Лотерея «Три Семёрки» проводилась m дней. В день i в лотерее участвовали ni людей с номерами a<sub>i,1</sub>, …, a<sub>i,ni</sub>.</p>
 
   <p>Известно, что в каждый из m дней из участников лотереи выбирался ровно один победитель. Победителю лотереи в день i запрещено участвовать в лотерее в дни с номерами от i+1 до m.</p>
 
   <p>К сожалению, информация о победителях лотереи была утеряна. Вам нужно восстановить любой возможный список победителей лотереи в дни с номерами от 1 до m или определить, что это невозможно.</p>
 
   <h4>Входные данные</h4>
-  <p>Каждый тест состоит из нескольких наборов входных данных. В первой строке находится одно целое число t (1≤t≤50000) — количество наборов входных данных. Далее следует описание наборов входных данных.</p>
+  <p>Каждый тест состоит из нескольких наборов входных данных. В первой строке находится одно целое число t (1 ≤ t ≤ 50000) — количество наборов входных данных. Далее следует описание наборов входных данных.</p>
 
-  <p>Первая строка каждого набора входных данных содержит одно целое число m (1≤m≤50000) — количество дней, в которые проводилась лотерея.</p>
+  <p>Первая строка каждого набора входных данных содержит одно целое число m (1 ≤ m ≤ 50000) — количество дней, в которые проводилась лотерея.</p>
 
   <p>Далее для каждого i от 1 до m находится блок данных из двух строк.</p>
 
-  <p>В первой строке каждого блока находится одно целое число ni (1≤ni≤50000) — количество участников лотереи в день i.</p>
+  <p>В первой строке каждого блока находится одно целое число ni (1 ≤ ni ≤ 50000) — количество участников лотереи в день i.</p>
 
-  <p>Во второй строке блока находятся числа ai,1,…,ai,ni (1≤ai,j≤50000) — номера участников лотереи в день i. Гарантируется, что все числа ai,1,…,ai,ni попарно различны.</p>
+  <p>Во второй строке блока находятся числа a<sub>i,1</sub>,…,a<sub>i,ni</sub> (1 ≤ a<sub>i,j</sub> ≤ 50000) — номера участников лотереи в день i. Гарантируется, что все числа a<sub>i,1</sub>,…,a<sub>i,ni</sub> попарно различны.</p>
 
   <p>Гарантируется, что сумма значений ni по всем блокам всех наборов входных данных не превосходит 50000.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, если решения не существует, выведите одно целое число -1.</p>
 
-  <p>Иначе выведите m целых чисел p1,p2,…,pm (1≤pi≤50000) — номера победителей лотереи в дни с 1 по m. Если существует несколько корректных решений, выведите любое из них.</p>
+  <p>Иначе выведите m целых чисел p1, p2, …, pm (1 ≤ pi ≤ 50000) — номера победителей лотереи в дни с 1 по m. Если существует несколько корректных решений, выведите любое из них.</p>
 
   <h4>Пример</h4>
 <pre>
@@ -159,6 +207,89 @@ No
   <p>В первом наборе входных данных один из подходящих ответов [8,2,1], так как участник с номером 8 участвовал в день 1, но не участвовал в дни 2 и 3; участник с номером 2 участвовал в день 2, но не участвовал в день 3; а участник с номером 1 участвовал в день 3. Обратите внимание, что это не единственный возможный ответ, например, [8,9,4] также является верным ответом.</p>
   <p>Во втором наборе входных данных оба участника лотереи участвовали в обоих днях лотереи, значит любой возможный победитель лотереи в день 1 обязательно участвовал в день 2, значит подходящего ответа не существует.</p>
   <p>В третьем наборе входных данных в дни 2, 3 и 4 участвовал только один участник, а в день 1  единственный участник, не участвовавший в лотерее в днях 2,3,4 — это участник 2. Значит [2,1,4,3] — единственно верный ответ.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;map&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios_base::sync_with_stdio(false);
+  cin.tie(nullptr);
+  cout.tie(nullptr);
+
+// условная компиляций
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int m; // число дней
+    cin >> m;
+
+    // создадим словарь, где ключ - это номер участника
+    // а значение - последний день, когда он участвовал
+    map&lt;int, int&gt; Last;
+
+    for (int day = 1; day &lt;= m; day++) {
+      int n; // число участников
+      cin >> n;
+      vector&lt;int&gt; A(n + 1); // номера участников
+      for (int i = 1; i &lt;= n; i++) {
+        cin >> A[i];
+      }
+
+      // решение
+      for (int i = 1; i &lt;= n; i++) {
+        Last[A[i]] = day;
+      }
+    }
+
+    // паттерн ключ-значение, значение-ключ
+    // создадим перевернутый словарь
+    // ключ - день, значение - участник
+    map&lt;int, int&gt; Day;
+    for (int i = 1; i &lt;= Last.size(); i++) {
+      Day[Last[i]] = i;
+    }
+
+    // соберем результат
+    vector&lt;int&gt; Res(m + 1);
+    bool flag = true;
+    for (int day = 1; day &lt;= m; day++) {
+      // если в какой-то из дней
+      // не было победителя
+      if (Day[day] == 0) {
+        flag = false;
+      } else {
+        Res[day] = Day[day];
+      }
+    }
+
+    // вывод результата
+    if (flag) {
+      for (int day = 1; day &lt;= m; day++) {
+        cout &lt;&lt; Res[day] &lt;&lt; ' ';
+      }
+    } else {
+      cout &lt;&lt; -1;
+    }
+    cout &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
