--- a/src/components/alg/alg-pract/codeforces/pages/elem-230721-Round886.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230721-Round886.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/1850" target="_blank">Codeforces Round 886 (Div. 4) 2023-07-21</a></p>
+  <a href="https://codeforces.com/contest/1850" target="_blank">Codeforces Round 886 (Div. 4) 2023-07-21</a>
 </article>
 
 
@@ -7,16 +7,14 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. To My Critics</a>
-    <br><a href="#task2">Задача B. Десять слов мудрости</a>
-    <br><a href="#task3">Задача C. Слово на бумаге</a>
-    <br><a href="#task4">Задача D. Сбалансированный раунд</a>
-    <br><a href="#task5">Задача E. Картон для картин</a>
-    <br><a href="#task6">Задача F. We Were Both Children</a>
-    <br><a href="#task7">Задача G. The Morning Star</a>
-    <br><a href="#task8">Задача H. Третья буква</a>
-  </p>
+      <a href="#task1">Задача A. To My Critics</a>
+  <br><a href="#task2">Задача B. Десять слов мудрости</a>
+  <br><a href="#task3">Задача C. Слово на бумаге</a>
+  <br><a href="#task4">Задача D. Сбалансированный раунд</a>
+  <br><a href="#task5">Задача E. Картон для картин</a>
+  <br><a href="#task6">Задача F. We Were Both Children</a>
+  <br><a href="#task7">Задача G. The Morning Star</a>
+  <br><a href="#task8">Задача H. Третья буква</a>
 </article>
 
 
