--- a/src/components/alg/alg-pract/codeforces/pages/elem-230921-Round898.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230921-Round898.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/1873" target="_blank">Codeforces Round 898 (Div. 4) 2023-09-21</a></p>
+  <a href="https://codeforces.com/contest/1873" target="_blank">Codeforces Round 898 (Div. 4) 2023-09-21</a>
 </article>
 
 
@@ -7,16 +7,14 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Короткая сортировка</a>
-    <br><a href="#task2">Задача B. Хороший ребенок</a>
-    <br><a href="#task3">Задача C. Стрельба по мишени</a>
-    <br><a href="#task4">Задача D. 1D Ластик</a>
-    <br><a href="#task5">Задача E. Построение аквариума</a>
-    <br><a href="#task6">Задача F. Деревья с деньгами</a>
-    <br><a href="#task7">Задача G. ABBC или BACB</a>
-    <br><a href="#task8">Задача H. Безумный город</a>
-  </p>
+      <a href="#task1">Задача A. Короткая сортировка</a>
+  <br><a href="#task2">Задача B. Хороший ребенок</a>
+  <br><a href="#task3">Задача C. Стрельба по мишени</a>
+  <br><a href="#task4">Задача D. 1D Ластик</a>
+  <br><a href="#task5">Задача E. Построение аквариума</a>
+  <br><a href="#task6">Задача F. Деревья с деньгами</a>
+  <br><a href="#task7">Задача G. ABBC или BACB</a>
+  <br><a href="#task8">Задача H. Безумный город</a>
 </article>
 
 
