--- a/src/components/alg/alg-pract/codeforces/pages/elem-241117-Round988.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241117-Round988.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2037" target="_blank">Codeforces Round 988 (Div.3) 2024-11-17</a></p>
+  <a href="https://codeforces.com/contest/2037" target="_blank">Codeforces Round 988 (Div.3) 2024-11-17</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Двойки</a>
-    <br><a href="#task2">Задача B. Перехваченные входные данные</a>
-    <br><a href="#task3">Задача C. Любимая перестановка Суперультры</a>
-    <br><a href="#task4">Задача D. Акулий серфинг</a>
-    <br><a href="#task5">Задача E. Любимая двоичная строка Качины</a>
-    <br><a href="#task6">Задача F. Пылающее Пламя</a>
-    <br><a href="#task7">Задача G. Исследование Натлана</a>
-  </p>
+      <a href="#task1">Задача A. Двойки</a>
+  <br><a href="#task2">Задача B. Перехваченные входные данные</a>
+  <br><a href="#task3">Задача C. Любимая перестановка Суперультры</a>
+  <br><a href="#task4">Задача D. Акулий серфинг</a>
+  <br><a href="#task5">Задача E. Любимая двоичная строка Качины</a>
+  <br><a href="#task6">Задача F. Пылающее Пламя</a>
+  <br><a href="#task7">Задача G. Исследование Натлана</a>
 </article>
 
 
