--- a/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2050" target="_blank">Codeforces Round 991 (Div.3) 2024-12-05</a></p>
+  <a href="https://codeforces.com/contest/2050" target="_blank">Codeforces Round 991 (Div.3) 2024-12-05</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Переносы строк</a>
-    <br><a href="#task2">Задача B. Переливайка</a>
-    <br><a href="#task3">Задача C. Неинтересное число</a>
-    <br><a href="#task4">Задача D. Максимизация цифровой строки</a>
-    <br><a href="#task5">Задача E. Три строки</a>
-    <br><a href="#task6">Задача F. Максимальное модульное равенство</a>
-    <br><a href="#task7">Задача G. Развал дерева</a>
-  </p>
+      <a href="#task1">Задача A. Переносы строк</a>
+  <br><a href="#task2">Задача B. Переливайка</a>
+  <br><a href="#task3">Задача C. Неинтересное число</a>
+  <br><a href="#task4">Задача D. Максимизация цифровой строки</a>
+  <br><a href="#task5">Задача E. Три строки</a>
+  <br><a href="#task6">Задача F. Максимальное модульное равенство</a>
+  <br><a href="#task7">Задача G. Развал дерева</a>
 </article>
 
 
