--- a/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
@@ -1,14 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-</article>
-
-
-<article class="article">
-  <h1>Контест Round 993 (Div.4)</h1>
-  <p>Конспект видео от 2024.12.15</p>
-  <p><a href="https://codeforces.com/contest/2044" target="_blank">Codeforces Round 993 (Div.4) 2024-12-15</a></p>
+  <a href="https://codeforces.com/contest/2044" target="_blank">Codeforces Round 993 (Div.4) 2024-12-15</a>
 </article>
 
 
@@ -16,17 +7,15 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Легкая задача</a>
-    <br><a href="#task2">Задача B. Обычная задача</a>
-    <br><a href="#task3">Задача C. Сложная задача</a>
-    <br><a href="#task4">Задача D. Задача посложнее</a>
-    <br><a href="#task5">Задача E. Безумная задача</a>
-    <br><a href="#task6">Задача F. Легкая демоническая задача</a>
-    <br><a href="#task7">Задача G1. Средняя демоническая задача (легкая версия)</a>
-    <br><a href="#task8">Задача G2. Средняя демоническая задача (сложная версия)</a>
-    <br><a href="#task9">Задача H. Сложная демоническая задача</a>
-  </p>
+      <a href="#task1">Задача A. Легкая задача</a>
+  <br><a href="#task2">Задача B. Обычная задача</a>
+  <br><a href="#task3">Задача C. Сложная задача</a>
+  <br><a href="#task4">Задача D. Задача посложнее</a>
+  <br><a href="#task5">Задача E. Безумная задача</a>
+  <br><a href="#task6">Задача F. Легкая демоническая задача</a>
+  <br><a href="#task7">Задача G1. Средняя демоническая задача (легкая версия)</a>
+  <br><a href="#task8">Задача G2. Средняя демоническая задача (сложная версия)</a>
+  <br><a href="#task9">Задача H. Сложная демоническая задача</a>
 </article>
 
 
