--- a/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2051" target="_blank">Codeforces Round 995 (Div.3) 2024-12-22</a></p>
+  <a href="https://codeforces.com/contest/2051" target="_blank">Codeforces Round 995 (Div.3) 2024-12-22</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Подготовка к олимпиаде</a>
-    <br><a href="#task2">Задача B. Путешествие</a>
-    <br><a href="#task3">Задача C. Подготовка к экзамену</a>
-    <br><a href="#task4">Задача D. Подсчет количества пар</a>
-    <br><a href="#task5">Задача E. Лучшая цена</a>
-    <br><a href="#task6">Задача F. Джокер</a>
-    <br><a href="#task7">Задача G. Змейки</a>
-  </p>
+      <a href="#task1">Задача A. Подготовка к олимпиаде</a>
+  <br><a href="#task2">Задача B. Путешествие</a>
+  <br><a href="#task3">Задача C. Подготовка к экзамену</a>
+  <br><a href="#task4">Задача D. Подсчет количества пар</a>
+  <br><a href="#task5">Задача E. Лучшая цена</a>
+  <br><a href="#task6">Задача F. Джокер</a>
+  <br><a href="#task7">Задача G. Змейки</a>
 </article>
 
 
