--- a/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2060" target="_blank">Codeforces Round 998 (Div.3) 2025-01-19</a></p>
+  <a href="https://codeforces.com/contest/2060" target="_blank">Codeforces Round 998 (Div.3) 2025-01-19</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Фибоначчиевость</a>
-    <br><a href="#task2">Задача B. Карточная игра Фермера Джона</a>
-    <br><a href="#task3">Задача C. Игра математиков</a>
-    <br><a href="#task4">Задача D. Сортировка вычитанием минимума</a>
-    <br><a href="#task5">Задача E. Составление графа</a>
-    <br><a href="#task6">Задача F. Умножительные массивы</a>
-    <br><a href="#task7">Задача G. Ошибочная сортировка</a>
-  </p>
+      <a href="#task1">Задача A. Фибоначчиевость</a>
+  <br><a href="#task2">Задача B. Карточная игра Фермера Джона</a>
+  <br><a href="#task3">Задача C. Игра математиков</a>
+  <br><a href="#task4">Задача D. Сортировка вычитанием минимума</a>
+  <br><a href="#task5">Задача E. Составление графа</a>
+  <br><a href="#task6">Задача F. Умножительные массивы</a>
+  <br><a href="#task7">Задача G. Ошибочная сортировка</a>
 </article>
 
 
