--- a/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2065" target="_blank">Codeforces Round 1003 (Div.4) 2025-02-09</a></p>
+  <a href="https://codeforces.com/contest/2065" target="_blank">Codeforces Round 1003 (Div.4) 2025-02-09</p>
 </article>
 
 
@@ -10,17 +7,15 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Скибидус и Амог'у</a>
-    <br><a href="#task2">Задача B. Скибидус и Огайо</a>
-    <br><a href="#task3">Задача C1. Скибидус и Fanum tax (простая версия)</a>
-    <br><a href="#task4">Задача C2. Скибидус и Fanum tax (сложная версия)</a>
-    <br><a href="#task5">Задача D. Скибидус и сигма</a>
-    <br><a href="#task6">Задача E. Скибидус и rizz</a>
-    <br><a href="#task7">Задача F. Скибидус и slay</a>
-    <br><a href="#task8">Задача G. Скибидус и ложь</a>
-    <br><a href="#task9">Задача H. Бро считает себя избранным</a>
-  </p>
+      <a href="#task1">Задача A. Скибидус и Амог'у</a>
+  <br><a href="#task2">Задача B. Скибидус и Огайо</a>
+  <br><a href="#task3">Задача C1. Скибидус и Fanum tax (простая версия)</a>
+  <br><a href="#task4">Задача C2. Скибидус и Fanum tax (сложная версия)</a>
+  <br><a href="#task5">Задача D. Скибидус и сигма</a>
+  <br><a href="#task6">Задача E. Скибидус и rizz</a>
+  <br><a href="#task7">Задача F. Скибидус и slay</a>
+  <br><a href="#task8">Задача G. Скибидус и ложь</a>
+  <br><a href="#task9">Задача H. Бро считает себя избранным</a>
 </article>
 
 
