--- a/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2072" target="_blank">Codeforces Round 1006 (Div.3) 2025-02-25</a></p>
+  <a href="https://codeforces.com/contest/2072" target="_blank">Codeforces Round 1006 (Div.3) 2025-02-25</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Новый мир, новый я, новый массив</a>
-    <br><a href="#task2">Задача B. Будучи казначеем в прошлом, я помогаю гоблинам обманывать людей</a>
-    <br><a href="#task3">Задача C. Создание ключей от хранИЛИщ стало моим основным навыком</a>
-    <br><a href="#task4">Задача D. Для магов нет ничего сложного в экзамене, но я его не осилил</a>
-    <br><a href="#task5">Задача E. Тебе же нравится герой, который бьёт по площади двойным уроном?</a>
-    <br><a href="#task6">Задача F. Прощай, жизнь банкира, здравствуй, жизнь мага</a>
-    <br><a href="#task7">Задача G. Переворачивая числа 300 лет, сам того не заметив, посчитал сумму</a>
-  </p>
+      <a href="#task1">Задача A. Новый мир, новый я, новый массив</a>
+  <br><a href="#task2">Задача B. Будучи казначеем в прошлом, я помогаю гоблинам обманывать людей</a>
+  <br><a href="#task3">Задача C. Создание ключей от хранИЛИщ стало моим основным навыком</a>
+  <br><a href="#task4">Задача D. Для магов нет ничего сложного в экзамене, но я его не осилил</a>
+  <br><a href="#task5">Задача E. Тебе же нравится герой, который бьёт по площади двойным уроном?</a>
+  <br><a href="#task6">Задача F. Прощай, жизнь банкира, здравствуй, жизнь мага</a>
+  <br><a href="#task7">Задача G. Переворачивая числа 300 лет, сам того не заметив, посчитал сумму</a>
 </article>
 
 
