--- a/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2093" target="_blank">Codeforces Round 1016 (Div.3) 2025-04-08</a></p>
+  <a href="https://codeforces.com/contest/2093" target="_blank">Codeforces Round 1016 (Div.3) 2025-04-08</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Идеальный генератор</a>
-    <br><a href="#task2">Задача B. Дорогое число</a>
-    <br><a href="#task3">Задача C. Простое повторение</a>
-    <br><a href="#task4">Задача D. Кайфовая таблица</a>
-    <br><a href="#task5">Задача E. Мин макс мех</a>
-    <br><a href="#task6">Задача F. Хакеры и нейросети</a>
-    <br><a href="#task7">Задача G. Укоротить массив</a>
-  </p>
+      <a href="#task1">Задача A. Идеальный генератор</a>
+  <br><a href="#task2">Задача B. Дорогое число</a>
+  <br><a href="#task3">Задача C. Простое повторение</a>
+  <br><a href="#task4">Задача D. Кайфовая таблица</a>
+  <br><a href="#task5">Задача E. Мин макс мех</a>
+  <br><a href="#task6">Задача F. Хакеры и нейросети</a>
+  <br><a href="#task7">Задача G. Укоротить массив</a>
 </article>
 
 
