--- a/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/2123" target="_blank">Codeforces Round 1034 (Div.3) 2025-07-01</a></p>
+  <a href="https://codeforces.com/contest/2123" target="_blank">Codeforces Round 1034 (Div.3) 2025-07-01</a>
 </article>
 
 
@@ -7,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. И снова игра на доске</a>
-    <br><a href="#task2">Задача B. Турнир</a>
-    <br><a href="#task3">Задача C. Минимум префикса и максимум суффикса</a>
-    <br><a href="#task4">Задача D. Битва на бинарной строке</a>
-    <br><a href="#task5">Задача E. Подсчет MEX</a>
-    <br><a href="#task6">Задача F. Минимизировать неподвижные точки</a>
-    <br><a href="#task7">Задача G. Модульная сортировка</a>
-  </p>
+      <a href="#task1">Задача A. И снова игра на доске</a>
+  <br><a href="#task2">Задача B. Турнир</a>
+  <br><a href="#task3">Задача C. Минимум префикса и максимум суффикса</a>
+  <br><a href="#task4">Задача D. Битва на бинарной строке</a>
+  <br><a href="#task5">Задача E. Подсчет MEX</a>
+  <br><a href="#task6">Задача F. Минимизировать неподвижные точки</a>
+  <br><a href="#task7">Задача G. Модульная сортировка</a>
 </article>
 
 
@@ -67,6 +65,7 @@ Bob
 
   <details>
     <summary>Решение</summary>
+    <p>Если при делении n на 4 получаем остаток, то у Алисы есть возможность взять лишний нолик, а у Боба нет возможности взять соответствующее число с остатком на 3.</p>
 <pre>
 #include &lt;iostream&gt;
 
@@ -153,6 +152,7 @@ NO
 
   <details>
     <summary>Решение</summary>
+    <p>Если должно остаться 2 и более игрока, то ответ "YES". Если должен остаться только один игрок, то останется самый сильный.</p>
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -170,7 +170,7 @@ int main() {
     cin >> n >> j >> k;
     vector&lt;int&gt; A(n + 1);
     for (int i = 1; i &lt;= n; i++) {
-      cin >> A[i];
+      cin >> A[i]; // сила i-го игрока
     }
 
     // решение
@@ -260,6 +260,7 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+    <p>Преобразование массива в заданный элемент возможно только в том случае если слева от заданного элемента нет числа меньше, или справа нет числа больше. Соберем префикс минимумов и суффикс максимумов, чтобы проверять это условие для каждого числа из массива.</p>
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -283,45 +284,26 @@ int main() {
     }
 
     // решение
+    // строка результата
     string res(n, '0');
-    // находим min и max
-    int minai = A[1];
-    int maxai = A[1];
-    for (int i = 2; i &lt;= n; i++) {
-      if (A[i] > maxai) {
-        maxai = A[i];
-      }
-      if (minai > A[i]) {
-        minai = A[i];
-      }
-    }
 
-    // ставим 1
-    // если это min или max
-    // если слева нет меньше
-    // если справа нет больше
-
-    // соберем префиксную сумму минимумов
-    // соберем суффиксную сумму максимумов
+    // соберем префикс минимумов
     vector&lt;int&gt; Pref(n + 1);
-    vector&lt;int&gt; Suf(n + 1);
     Pref[1] = A[1];
     for (int i = 2; i &lt;= n; i++) {
       Pref[i] = min(Pref[i - 1], A[i]);
     }
+
+    // соберем суффикс максимумов
+    vector&lt;int&gt; Suf(n + 1);
     Suf[n] = A[n];
     for (int i = n - 1; i >= 1; i--) {
       Suf[i] = max(Suf[i + 1], A[i]);
     }
 
+    // для каждого элемента массива проверим условие
     for (int i = 1; i &lt;= n; i++) {
-      if (A[i] == minai || A[i] == maxai) {
-        res[i - 1] = '1';
-      }
-      if (A[i] == Pref[i]) {
-        res[i - 1] = '1';
-      }
-      if (A[i] == Suf[i]) {
+      if (A[i] == Pref[i] || A[i] == Suf[i]) {
         res[i - 1] = '1';
       }
     }
@@ -405,6 +387,7 @@ Alice
 
   <details>
     <summary>Решение</summary>
+    <p>Посчитаем число единиц cnt1 в бинарной строке. Если cnt1 ≤ k то выигрывает Алиса, потому что Алиса сразу преобразовывает все символы в нули. Иначе, смотрим на длину исходной строки. Если n ≥ 2 * k то выигрывает Боб, потому что боб может поочередно преобразовывать символы в единицы то из левой части массива, то из правой.</p>
 <pre>
 #include &lt;iostream&gt;
 
@@ -431,6 +414,7 @@ int main() {
       }
     }
 
+    // проверяем условие и выводим результат
     if (cnt1 &lt;= k || n &lt; 2 * k) {
       cout &lt;&lt; "Alice\n";
     } else {
@@ -468,7 +452,7 @@ int main() {
 
   <p>Первая строка каждого набора входных данных содержит одно целое число n (1 ≤ n ≤ 2⋅10⁵) — размер массива a.</p>
 
-  <p>Вторая строка каждого набора входных данных содержит n целых чисел, a1, a2, …, an (0 ≤ ai ≤ n).</p>
+  <p>Вторая строка каждого набора входных данных содержит n целых чисел, a₁, a₂, …, aₙ (0 ≤ aᵢ ≤ n).</p>
 
   <p>Гарантируется, что сумма n по всем наборам входных данных не превышает 2⋅10⁵.</p>
 
@@ -504,79 +488,60 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+    <p>При k = 0 (не удаляли элементы) MEX будет один и равен исходному mex. При k = n (удалили все элементы) MEX тоже будет один и равен нулю.</p>
+    <p>Посчитаем сколько раз в массиве встречается каждое число. Для этого создадим частотный словарь F, где ключ это число из входного массива, а значение это сколько раз оно встречается.</p>
+    <p>Найдем максимальное число в массиве.</p>
+    <p>Определим MEX исходного массива как первое минимальное число mex в частотном словаре F, которое встречается 0 раз. При удалении элементов из массива, MEX может оставаться таким же или быть меньше, то есть принимать значения от 0 до mex. Значит, количество возможных значений MEX будет от 1 до mex+1.</p>
+    <p>Допустим, в частотном словаре получилось два нуля. Это значит, чтобы получить MEX = 0 нужно удалить эти два нуля, то есть удалить два или более элементов. Чтобы получить MEX = i (i ≤ mex) нужно удалить все вхождения i в исходный массив, но не удалить ни одного элемента, меньшего чем i.</p>
 <pre>
 #include &lt;iostream&gt;
-#include &lt;algorithm&gt;
 #include &lt;vector&gt;
-#include &lt;map&gt;
 
 using namespace std;
 
 int main() {
-  // ускорение ввода-вывода
-  ios_base::sync_with_stdio(false);
-  cin.tie(nullptr);
-  cout.tie(nullptr);
-
   // число тестов
-  int t = 1;
+  int t;
   cin >> t;
 
-  while (t--)	{
+  while (t--) {
     // ввод данных
-    int n;
+    int n; // размер массива
     cin >> n;
 
-    // создадим частотный массив
-    map&lt;int, int&gt; Freq;
-    for (int i = 0; i &lt; n; i++)
-    {
-      int x;
+    // создадим частотный словарь
+    // ключ - число, значение - сколько раз встречается
+    vector&lt;int&gt; F(n + 1, 0);
+    for (int i = 0; i &lt; n; i++) {
+      int x; // число от 0 до n
       cin >> x;
-      Freq[x]++;
+      F[x]++;
     }
 
-    vector&lt;bool&gt; prov(n + 1);
-    //проверяет есть ли все числа до i включительно
-    prov[0] = Freq[0] > 0;
-    for (int i = 1; i &lt;= n; i++)
-      prov[i] = prov[i - 1] && (Freq[i] > 0);
-
-
-    vector&lt;int&gt; res(n + 2);//здесь будет ответ
-    //чтоб получить mex== x надо удалить все x из массива,
-    // но не удалить хотя бы одно вхождения чисел до него
-    //соответственно можем посчитать верхню
-    //и нижнюю границу для удалений чтоб получить mex==x
-    //для подсчета будем использовать префикс суммы
-    // чтоб прибавлять 1 на отрезке [l,r]
-    //нужно прибавить в позицию l удиницу
-    //и вычесть ее из позиции r+1
-    //после префикссуммы получим массив с прибавлениями
-    //для нуля тревиально считаем
-    res[Freq[0]]++;
-    res[n + 1]--;
-    for (int i = 1; i &lt;= n; i++)// для mex>0
-    {
-      if (!prov[i - 1])
-        //если нет какого-то числа меньше i
-        //то больше никаких mex новых не получить
-        break;
-
-      //иначе считаем возможное количество удалений по формуле выше
-      res[Freq[i]]++;
-      res[n - i + 1]--;
-
+    // патерн ключ-значение, значение-ключ
+    // создадим инферсный частотный массив
+    // ключ - количество чисел, значение - число
+    // прибавляя, будем вычитать лишнее число с конца
+    vector&lt;int&gt; invF(n + 2, 0);
+    for (int i = 0; i &lt;=n; i++) {
+      invF[F[i]]++;
+      invF[n - i + 1]--;
+      if (F[i] == 0) break;
     }
-    for (int i = 1; i &lt;= n; i++)
-    //префикс сумма считает ответ учитывая прибавления на отрезке
-    {
-      res[i] += res[i - 1];
+
+    // создадим массив для результата
+    vector&lt;int&gt; Res(n + 1, 0);
+    Res[0] = 1; // при удалении 0 элементов
+    Res[n] = 1; // при удалении всех n элементов
+
+    // для каждого числа от 1 до n - 1
+    for (int k = 1; k &lt; n; k++) {
+      Res[k] = Res[k - 1] + invF[k];
     }
 
     // вывод результата
     for (int i = 0; i &lt;= n; i++)
-      cout &lt;&lt; res[i] &lt;&lt; ' ';
+      cout &lt;&lt; Res[i] &lt;&lt; ' ';
     cout &lt;&lt; endl;
   }
 }
@@ -636,89 +601,75 @@ i   pi   gcd(pi,i)
 
   <details>
     <summary>Решение</summary>
+    <p>Найдем простые числа x в диапазоне от 1 до n. Будем переставлять их с числами 2*x, 3*x и т.д. которые меньше n.</p>
 <pre>
 #include &lt;iostream&gt;
-#include &lt;algorithm&gt;
 #include &lt;vector&gt;
-#include &lt;map&gt;
+#include &lt;set&gt;
 
-
-using ll = long long;
-using vll = std::vector&lt;ll&gt;;
 using namespace std;
 
-//заметим что 1 всегда на первом месте иначе массив плохой
-//давайте разобьем числа на группы по наибольшему простому делителю в нем
-//заметим что в каждой такой группе окажется либо он сам по себе или их будет много
-//сам по себе он кажется только в том случае если в перестановке только он делится на себя,тогда нам с ним уже ничего не сделать
+int main() {
+  // ускорение ввода-вывода
+  ios_base::sync_with_stdio(false);
+  cin.tie(nullptr);
+  cout.tie(nullptr);
 
-void slove()
-{
-  ll n;
-  cin >> n;
-  vector&lt;bool&gt; prov(n+1);
-  vll tmp(n + 1);
-  vll pr;
-  for (ll i = 2; i &lt;= n; i++)//найдем все простые в этой перестановке
-  {
-    if (tmp[i] == 0)
-    {
-      pr.push_back(i);
-
-      for (ll j = i * i; j &lt;= n; j += i)
-        tmp[j] = 1;
-    }
-  }
-  reverse(pr.begin(), pr.end());//перевернм чтоб идти от наибольшего
-  map&lt;ll,vll&gt; an;//здесь будем хранить группы
-  for (auto c: pr)
-  {
-    for (int i = c; i &lt;= n; i += c)//проходимся по числам которые делятся на текущий простой делитель и берем только те кого не брали
-    {
-      if (!prov[i])
-      {
-        prov[i] = true;
-        an[c].push_back(i);
-      }
-    }
-    //теперь мы хотим их перемешать между собой чтоб их индексы не совпадали с ними самими
-    reverse(an[c].begin(), an[c].end());//есть огромное количество вариантов ка кэт сделать, я выбрал просто перевернуть группу
-    ll sz = an[c].size();
-    if (sz > 1 && sz % 2 == 1)//заметим что если у нас количество элементов в группе нечетное и больше 1,то мы получим что центральный эелемент остался на своем месте
-    {
-      swap(an[c][sz / 2], an[c][sz / 2 - 1]);//прсто свапнем его с соедом
-    }
-  }
-  vll ans(n + 1);
-  for (auto c : pr)//теперь раставляем числа в том порядке как они находятся в группе
-  {
-    ll t = 0;
-    for (int i = c; i &lt;= n; i += c)
-    {
-      if (ans[i]==0)
-      {
-        ans[i] = an[c][t];
-        t++;
-      }
-    }
-  }
-  ans[1] = 1;
-  for (int i = 1; i &lt;= n; i++)
-    cout &lt;&lt; ans[i] &lt;&lt; " ";
-  cout &lt;&lt; endl;
-}
-
-int main()
-{
-  //Fbild(1e6, mod);
-  ios_base::sync_with_stdio(false); cin.tie(0); cout.tie(0);
-  ll t = 1;
-
+  // число тестов
+  int t;
   cin >> t;
 
-  while (t--)
-  {
-    slove();
+  while (t--) {
+    // ввод данных
+    int n; // размер массива
+    cin >> n;
+
+    // соберем решето эратосфена
+    vector&lt;int&gt; A(n + 1);
+    A[0] = 1;
+    A[1] = 1;
+    for (int i = 2; i &lt;= n; i++) {
+      if (A[i] == 0) {
+        for (int j = 2 * i; j &lt;= n; j += i) {
+          A[j] = 1;
+        }
+      }
+    }
+
+    // обойдем все простые и составные числа
+    set&lt;int&gt; st;
+    vector&lt;int&gt; Result(n + 1);
+    Result[1] = 1;
+    for (int i = n; i > 0; i--) {
+      if (A[i] == 0) {
+        if (i * 2 &lt;= n) {
+          vector&lt;int&gt; Chain;
+          int k = 1;
+
+          while (i * k &lt;= n) {
+            if (st.find(i * k) == st.end()) {
+              Chain.push_back(i * k);
+              st.insert(i * k);
+            }
+            k++;
+          }
+
+          Chain.push_back(i);
+          // соберем результат
+          for (int j = 0; j &lt; Chain.size() - 1; j++) {
+            Result[Chain[j]] = Chain[j + 1];
+          }
+        } else {
+          Result[i] = i;
+        }
+      }
+    }
+
+    // вывод результата
+    for (int i = 1; i &lt;= n; i++) {
+      cout &lt;&lt; Result[i] &lt;&lt; ' ';
+    }
+    cout &lt;&lt; '\n';
   }
 }
 </pre>
@@ -739,7 +690,7 @@ int main()
   <p>Ответьте на запросы следующего вида:</p>
   <ul>
     <li>1 i x : присвоить ai:=x</li>
-    <li>2 k : за одно действие вы можете выбрать элемент ai и присвоить ai:=(ai+k)(modm) * — определите, существует ли некоторая последовательность (возможно, из нуля) операций, чтобы сделать a неубывающим†.</li>
+    <li>2 k : за одно действие вы можете выбрать элемент ai и присвоить ai:=(ai+k)(mod m) * — определите, существует ли некоторая последовательность (возможно, из нуля) операций, чтобы сделать a неубывающим†.</li>
   </ul>
 
   <p>Обратите внимание, что запросы типа 2 независимы, то есть фактически эти операции не выполняются. Запросы типа 1 являются постоянными.</p>
