--- a/src/components/code/code-c/c-courses/pages/elem-2018hir.html
+++ b/src/components/code/code-c/c-courses/pages/elem-2018hir.html
@@ -80,6 +80,48 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p2"></div>
   <h3>2 Ошибки и предупреждения при компиляции на Си</h3>
+
+  <p>Си это язык программирования высокого уровня. Процессор компьютера не знает языка Си. Чтобы процессор мог выполнить программу нужны <strong>компилятор</strong> и <strong>операционная система</strong>. Компилятор преобразует исходный текст на языке Си в исполняемый файл. При запуске исполняемого файла операционная система загружает его в оперативную память и контроллирует весь процесс.</p>
+  <p>Компилятор, встретив ошибку, прекращает компиляцию и возвращает эту ошибку на экран разработчику.</p>
+  <p>Напишем программу</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("I'm a Bot. What's your name?\n");
+  char name;
+  scanf("%s", name);
+  printf("Hello, %s! How old are you?\n");
+  int age;
+  scanf("%s", age);
+  printf("Yuo are looking younger! "
+         "I thought you are %d!\n", age - 3);
+
+  return 0;
+}
+</pre>
+  <p>Программа содержит ошибки. Но она скомпилируется без ошибок. Запустим программу. При вводе имени операционная система завершит программу с ошибкой. По умолчанию компилятор выдает только ошибки. Можно его настроить так, чтобы он выдавал еще и предупреждения.</p>
+  <p>Если мы работаем в программе Code::Blocks, то нужно зайти в настройки компилятора</p>
+  <code>Settings - Compiler</code>
+  <p>В открывшемся окне Compiler settings выберем раздел Global compiler settings. На вкладке Compiler settings выберем вкладку Compiler Flags и найдем раздел Warnings. Поставим галочку рядом с флагом [-Wall]</p>
+  <code>Enable all common compiler warnings (override many other settings) [Wall]</code>
+  <p>Если теперь запустить компиляцию, то мы получим предупреждения об ошибках и программа не будет скомпилирована. Исправим ошибки в программе.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  printf("I'm a Bot. What's your name?\n");
+  char name[20];
+  scanf("%s", name);
+  printf("Hello, %s! How old are you?\n", name);
+  int age;
+  scanf("%d", &age);
+  printf("Yuo are looking younger! "
+         "I thought you are %d!\n", age - 3);
+
+  return 0;
+}
+</pre>
 </article>
 
 
@@ -87,6 +129,24 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p3"></div>
   <h3>3 Этапы компиляции на Си предобработка, трансляция, компоновка</h3>
+  <ol>
+    <li>Этап preprocessing выполняется препроцессором. Удаляются комментарии, выполняются текстовые замены, условные включения кода, включение файлов, включение кода библиотек. В результате файл не создается.</li>
+    <li>Этап compilation (компиляция, трансляция). Трансляция - перевод в машинные коды. Создается объектный файл с расширением .o, который состоит из машинных кодов.</li>
+    <li>Этап linking (линковка, компоновка, сборка). Несколько объектных файлов собираются в один исполняемый файл. Создается исполняемый файл с расширением .exe.</li>
+  </ol>
+  <p>В программе Code::Blicks внизу на вкладке Build log можно посмотреть что происходит при сборке.</p>
+  <p>Выполним пошагово все этапы компиляции на программе hello.c.</p> <p>Первый этап - препроцессинг. В качестве исходного файла для этапа препроцессинга передадим исходный текст программы, написанный нами на языке Си.</p>
+  <code>gcc -E hello.c</code>
+  <p>В результате создастся код, после обработки препроцессором, и выведется на экран, но никакой файл не создастся. Мы можем перенаправить вывод с экрана в файл</p>
+  <code>gcc -E hello.c > hello_prep.c</code>
+  <p>Препроцессор удаляет все коментарии, сделанные программистом, но вставляет свои коментарии для компилятора на строках, начинающихся с решетки #.</p>
+  <p>Второй этап - трансляция. В качестве исходного файла для этапа трансляции передадим файл, полученный на предыдущем этапе препроцессинга.</p>
+  <code>gcc -c hello_prep.c</code>
+  <p>В результате трансляции создастся объектный файл с расширением .o с машинным кодом.</p>
+  <p>Третий этап - сборка. Нужно собрать вместе полученный объектный код нашей программы и объектные коды включенных в программу библиотек. Компилятор сам знает где в операционной системе находятся файлы библиотек. Нам достаточно передать ему только наш объектный файл</p>
+  <code>gcc hello_prep.o</code>
+  <p>В результате линковки создастся исполняемый файл с именем a.exe. Если мы хотим получить другое имя, нужно его задать.</p>
+  <code>gcc hello_prep.o -o hello.exe</code>
 </article>
 
 
@@ -94,6 +154,31 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p4"></div>
   <h3>4 Переполнение и ошибки при работе с целыми типами в Си</h3>
+
+  <p>Пусть у нас есть три бита для хранения переменной целого типа. Диапазон возможных значений переменной будет от 0 (000) до 7 (111). Кодовая таблица трех-битового числа без знака:</p>
+<pre>
+000 = 0
+001 = 1
+010 = 2
+011 = 3
+100 = 4
+101 = 5
+110 = 6
+111 = 7
+</pre>
+  <p>Это также называется кольцо вычетов по модулю 8. Если прибавить единицу к семерке, то в переменной получим число 0. Это назвается overflow (переполнение). Если вычесть единицу из нуля, то получим 7. Это называется underflow.</p>
+  <p>Теперь мы хотим хранить еще и отрицательные числа. Сохраним идею кольца вычетов. Называется это дополнительный двоичный код. Кодовая таблица 3-битового числа со знаком.</p>
+<pre>
+000 = 0
+001 = 1
+010 = 2
+011 = 3
+100 = -4
+101 = -3
+110 = -2
+111 = -1
+</pre>
+  <p>Диапазон допустимых значений от -4 до 3.</p>
 </article>
 
 
@@ -101,6 +186,20 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p5"></div>
   <h3>5 Циклы for и while в Си сходство и различие</h3>
+
+  <p>Цикл for является полным аналогом цикла while. Оба цикла могут быть бесконечными.</p>
+<pre>
+int i = 0;
+while (i &lt; 10) {
+  printf("%d", i);
+  ++i;
+}
+</pre>
+<pre>
+for (int i = 0; i &lt; 10; ++i) {
+  printf("%d", i);
+}
+</pre>
 </article>
 
 
@@ -108,6 +207,47 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p6"></div>
   <h3>6 Генерация арифметических и геометрических прогрессий на Си</h3>
+
+  <p>Генерация арифметической прогрессии с помощью цикла while</p>
+<pre>
+int start = 1, step = 1, stop = 10;
+int x = start;
+while (x &lt; stop) {
+  printf("x = %d\n", x);
+  x += step;  // арифметическая прогрессия
+}
+</pre>
+
+  <p>Генерация геомеметической прогрессии с помощью цикла while</p>
+<pre>
+int start = 1, step = 2, stop = 1050;
+int x = start;
+while (x &lt; stop) {
+  printf("x = %d\n", x);
+  x *= step;  // геометрическая прогрессия
+}
+</pre>
+
+  <p>Генерация убывающей арифметической прогрессии с помощью цикла while</p>
+<pre>
+int start = 10, step = -1, stop = 1;
+int x = start;
+while (x > stop) {
+  printf("x = %d\n", x);
+  x += step;  // арифметическая прогрессия
+}
+</pre>
+
+  <p>Генерация возрастающей и убывающей арифметической прогрессии в зависимости от знака шага step</p>
+<pre>
+int start = 10, step = -1, stop = 1;
+int sign = (step > 0) ? 1 : -1;
+int x = start;
+while (sign * x &lt; sign * stop) {
+  printf("x = %d\n", x);
+  x += step;  // арифметическая прогрессия
+}
+</pre>
 </article>
 
 
@@ -115,6 +255,19 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p7"></div>
   <h3>7 Операции присваивания и сравнения чисел в Си</h3>
+
+  <p>Операция со знаком присваивания = сначала вычисляет выражение справа, затем вычисляет выражение слева и присваивает ему вычисленное выражение справа. Слева от знака присваивания может стоять только l-value выражение. l-value это реальная оперативная память, куда можно записать значение.</p>
+  <code>int x, y, z;</code>
+  <code>x = y = z = 5;</code>
+  <p>Нельзя в одном выражении несколько раз делать присваивание в одну переменную. Потому что компилятор может закешировать разельтат и произвести запись в переменную только один раз. При этом записано может быть не то что вам нужно</p>
+  <code>x = (x = 2) + (x = 5); // так нельзя</code>
+  <code>x = (x++) + (++x); // так нельзя</code>
+  <p>Операции со знаками сравнения тоже возвращают результат. И этот результат - целое число</p>
+  <code>int x = (5 > 2); // x = 1</code>
+  <code>int x = (5 > 2) + (4 >= -1) + (10 == 9 + 1); // x = 3</code>
+  <code>int y = (2 >= 5); // y = 0</code>
+  <p>Избегайте сравнения знаковых и беззнаковых целых типов. Здесь -1 будет приведена к беззнаковому типу и равна 2<sup>31</sup> - 1.</p>
+  <code>int z = (5u > -1); // z = 0</code>
 </article>
 
 
@@ -122,6 +275,18 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p8"></div>
   <h3>8 Деление нацело и взятие остатка</h3>
+
+  <p>Деление целых чисел происходит нацело, с отбрасыванием остатка.</p>
+  <code>int x = 12345 / 1000; // x = 12</code>
+  <p>Остаток от деления вычисляется правильно только при положительных числах.</p>
+  <code>int y = 12345 % 1000; // y = 345</code>
+  <p>У отрицательных чисел остаток от деления отрицательный, что противоречит математике. В своих программах это надо учитывать и исправлять.</p>
+  <code>int z = -19 % 10; // z = -9</code>
+  <p>Для получения вещественного числа недостаточно разделить два целых числа. Сначала вычислится выражение справа, а это деление двух целых чисел. Потом полученное целое число при записи в вещественную переменную будет приведено к вещественному типу.</p>
+  <code>double x = 1 / 2; // x = 0</code>
+  <p>Мы сами должны сделать операнды для операции деления дробными</p>
+  <code>double x = 1. / 2. ; // x = 0.5</code>
+  <code>double x = (double)y / (double)z;</code>
 </article>
 
 
@@ -129,6 +294,39 @@ int main(int argc, char* argv[]) {
 <article class="article">
   <div class="anchor" id="p9"></div>
   <h3>9 Оператор if и организация ветвления в Си</h3>
+
+  <p>Определим положение точки с координатами x, y на координатной плоскости</p>
+<pre>
+if (y > 0) {
+  if (x > 0) {
+    printf("1-st quarter\n");
+  } else {
+    printf("2-nd quarter\n");
+  }
+} else {
+  if (x > 0) {
+    printf("4-th quarter\n");
+  } else {
+    printf("3-rd quarter\n");
+  }
+}
+if (x == 0 || y == 0) {
+  printf("Point is on axis\n");
+}
+</pre>
+<pre>
+if (y > 0 && x > 0) {
+  printf("1-st quarter\n");
+} else if (y > 0 && x &lt; 0) {
+  printf("2-nd quarter\n");
+} else if (y &lt; 0 && x &lt; 0) {
+  printf("3-rd quarter\n");
+} else if (y &lt; 0 && x > 0){
+  printf("4-th quarter\n");
+} else {
+  printf("Point is on axis\n");
+}
+</pre>
 </article>
 
 
