--- a/src/components/code/code-c/c-courses/pages/elem-2018prosto.html
+++ b/src/components/code/code-c/c-courses/pages/elem-2018prosto.html
@@ -68,6 +68,188 @@
 </article>
 
 
+<!-- 4 Директивы препроцессора. Часть 1 -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>4 Директивы препроцессора. Часть 1</h3>
+</article>
+
+
+<!-- 5 Директивы препроцессора. Часть 2 -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>5 Директивы препроцессора. Часть 2</h3>
+</article>
+
+
+<!-- 6 Циклы for, do_while, while -->
+<article class="article">
+  <div class="anchor" id="p6"></div>
+  <h3>6 Циклы for, do_while, while</h3>
+</article>
+
+
+<!-- 7 Инструцкии if - else, switch -->
+<article class="article">
+  <div class="anchor" id="p7"></div>
+  <h3>7 Инструцкии if - else, switch</h3>
+</article>
+
+
+<!-- 8 Побитовые операции - &, _, ^, ~. Часть 1 -->
+<article class="article">
+  <div class="anchor" id="p8"></div>
+  <h3>8 Побитовые операции - &, _, ^, ~. Часть 1</h3>
+</article>
+
+
+<!-- 9 Побитовые операции - &, _, ^, ~. Часть 2 -->
+<article class="article">
+  <div class="anchor" id="p9"></div>
+  <h3>9 Побитовые операции - &, _, ^, ~. Часть 2</h3>
+</article>
+
+
+<!-- 10 Задача №1. Манипуляция с битами. Постановка задачи -->
+<article class="article">
+  <div class="anchor" id="p10"></div>
+  <h3>10 Задача №1. Манипуляция с битами. Постановка задачи</h3>
+</article>
+
+
+<!-- 11 Решение Задачи №1. Шифрование pin кода -->
+<article class="article">
+  <div class="anchor" id="p11"></div>
+  <h3>11 Решение Задачи №1. Шифрование pin кода</h3>
+</article>
+
+
+<!-- 12 Массивы и строки -->
+<article class="article">
+  <div class="anchor" id="p12"></div>
+  <h3>12 Массивы и строки</h3>
+</article>
+
+
+<!-- 13 Использование массивов. Пример 1 -->
+<article class="article">
+  <div class="anchor" id="p13"></div>
+  <h3>13 Использование массивов. Пример 1</h3>
+</article>
+
+
+<!-- 14 Использование массивов. Пример 2 -->
+<article class="article">
+  <div class="anchor" id="p14"></div>
+  <h3>14 Использование массивов. Пример 2</h3>
+</article>
+
+
+<!-- 15 Указатели -->
+<article class="article">
+  <div class="anchor" id="p15"></div>
+  <h3>15 Указатели</h3>
+</article>
+
+
+<!-- 16 Игра с нуля. Знакомство с Enum. Пишем Морской Бой. Часть 1 -->
+<article class="article">
+  <div class="anchor" id="p16"></div>
+  <h3>16 Игра с нуля. Знакомство с Enum. Пишем Морской Бой. Часть 1</h3>
+</article>
+
+
+<!-- 17 Продолжаем писать Морской Бой. Часть 2 -->
+<article class="article">
+  <div class="anchor" id="p17"></div>
+  <h3>17 Продолжаем писать Морской Бой. Часть 2</h3>
+</article>
+
+
+<!-- 18 Заканчиваем писать Морской Бой. Часть 3 -->
+<article class="article">
+  <div class="anchor" id="p18"></div>
+  <h3>18 Заканчиваем писать Морской Бой. Часть 3</h3>
+</article>
+
+
+<!-- 19 Игра с нуля. Сокобан. Часть 1. Создаем Меню -->
+<article class="article">
+  <div class="anchor" id="p19"></div>
+  <h3>19 Игра с нуля. Сокобан. Часть 1. Создаем Меню</h3>
+</article>
+
+
+<!-- 20 Игра с нуля. Сокобан. Продолжаем - Загружаем и рисуем уровень -->
+<article class="article">
+  <div class="anchor" id="p20"></div>
+  <h3>20 Игра с нуля. Сокобан. Продолжаем - Загружаем и рисуем уровень</h3>
+</article>
+
+
+<!-- 21 Игра с нуля. Сокобан. Заканчиваем -->
+<article class="article">
+  <div class="anchor" id="p21"></div>
+  <h3>21 Игра с нуля. Сокобан. Заканчиваем</h3>
+</article>
+
+
+<!-- 22 Структуры. Краткий обзор с примером -->
+<article class="article">
+  <div class="anchor" id="p22"></div>
+  <h3>22 Структуры. Краткий обзор с примером</h3>
+</article>
+
+
+<!-- 23 Структуры. Выравнивание полей структуры -->
+<article class="article">
+  <div class="anchor" id="p23"></div>
+  <h3>23 Структуры. Выравнивание полей структуры</h3>
+</article>
+
+
+<!-- 24 Динамическая память(English captions) -->
+<article class="article">
+  <div class="anchor" id="p24"></div>
+  <h3>24 Динамическая память(English captions)</h3>
+</article>
+
+
+<!-- 25 Структуры. Битовые поля -->
+<article class="article">
+  <div class="anchor" id="p25"></div>
+  <h3>25 Структуры. Битовые поля</h3>
+</article>
+
+
+<!-- 26 Указатель на функцию. Предикат. Boolean тип в Си -->
+<article class="article">
+  <div class="anchor" id="p26"></div>
+  <h3>26 Указатель на функцию. Предикат. Boolean тип в Си</h3>
+</article>
+
+
+<!-- 27 Абстрактный Тип Данных. Теория. Знакомство со списком -->
+<article class="article">
+  <div class="anchor" id="p27"></div>
+  <h3>27 Абстрактный Тип Данных. Теория. Знакомство со списком</h3>
+</article>
+
+
+<!-- 28 Потоки ввода_вывода. FILE_, stdin, stdout, stderr -->
+<article class="article">
+  <div class="anchor" id="p28"></div>
+  <h3>28 Потоки ввода_вывода. FILE_, stdin, stdout, stderr</h3>
+</article>
+
+
+<!-- 29 Передача одномерного массива в функцию -->
+<article class="article">
+  <div class="anchor" id="p29"></div>
+  <h3>29 Передача одномерного массива в функцию</h3>
+</article>
+
+
 <!-- 30 Передача двумерного массива в функцию -->
 <article class="article">
   <div class="anchor" id="p30"></div>
