--- a/src/components/code/code-ref/pages/elem-unicode.html
+++ b/src/components/code/code-ref/pages/elem-unicode.html
@@ -7,14 +7,11 @@
 <div class="article article__content">
   <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#sup">Надстрочные символы (superscript)</a></p>
-    <p><a href="#sub">Подстрочные символы (subscript)</a></p>
-    <p><a href="#need">Нужные unicode символы</a></p>
-    <p><a href="#about">about</a></p>
-  </div>
-
+      <a href="#links">links</a>
+  <br><a href="#sup">Надстрочные символы (superscript)</a>
+  <br><a href="#sub">Подстрочные символы (subscript)</a>
+  <br><a href="#need">Нужные unicode символы</a>
+  <br><a href="#about">about</a>
 </div>
 
 <!-- links -->
