--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,22 @@
 
 <ol reversed>
 
+  <li>2025.07.10 чт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 700-720стр
+  </li>
+
+  <li>2025.07.09 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 690-700стр
+  </li>
+
+  <li>2025.07.08 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 670-690стр
+  </li>
+
+  <li>2025.07.07 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 640-670стр
+  </li>
+
   <li>2025.07.03 чт
     <br>1. <strong>Книга</strong> <i>2019 Кольцов - Си на примерах 288стр</i> закончить 250-284стр
   </li>
