--- a/src/components/alg/alg-pract/codeforces/pages/elem-140112-Round223.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-140112-Round223.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/381" target="_blank">Codeforces Round 223 (Div. 2) 2014-01-12</a></p>
+  <a href="https://codeforces.com/contest/381" target="_blank">Codeforces Round 223 (Div. 2) 2014-01-12</a>
 </article>
 
 
@@ -7,13 +7,11 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Сережа и Дима</a>
-    <br><a href="#task2">Задача B. Сережа и лесенка</a>
-    <br><a href="#task3">Задача C. Сережа и префиксы</a>
-    <br><a href="#task4">Задача D. Сережа и дерево</a>
-    <br><a href="#task5">Задача E. Сережа и скобочки</a>
-  </p>
+      <a href="#task1">Задача A. Сережа и Дима</a>
+  <br><a href="#task2">Задача B. Сережа и лесенка</a>
+  <br><a href="#task3">Задача C. Сережа и префиксы</a>
+  <br><a href="#task4">Задача D. Сережа и дерево</a>
+  <br><a href="#task5">Задача E. Сережа и скобочки</a>
 </article>
 
 
