--- a/src/components/alg/alg-pract/codeforces/pages/elem-150302-Round295.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-150302-Round295.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <p><a href="https://codeforces.com/contest/520" target="_blank">Codeforces Round 295 (Div.2) 2015-03-02</a></p>
+  <a href="https://codeforces.com/contest/520" target="_blank">Codeforces Round 295 (Div.2) 2015-03-02</a>
 </article>
 
 
@@ -7,13 +7,11 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Панграмма</a>
-    <br><a href="#task2">Задача B. Две кнопки</a>
-    <br><a href="#task3">Задача C. Выравнивание ДНК</a>
-    <br><a href="#task4">Задача D. Кубики</a>
-    <br><a href="#task5">Задача E. Сплошные плюсы</a>
-  </p>
+      <a href="#task1">Задача A. Панграмма</a>
+  <br><a href="#task2">Задача B. Две кнопки</a>
+  <br><a href="#task3">Задача C. Выравнивание ДНК</a>
+  <br><a href="#task4">Задача D. Кубики</a>
+  <br><a href="#task5">Задача E. Сплошные плюсы</a>
 </article>
 
 
