--- a/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2091" target="_blank">Codeforces Round 1013 (Div.3) 2025-03-25</a></p>
+  <a href="https://codeforces.com/contest/2091" target="_blank">Codeforces Round 1013 (Div.3) 2025-03-25</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Дата олимпиады</a>
-    <br><a href="#task2">Задача B. Командная тренировка</a>
-    <br><a href="#task3">Задача C. Кодовый замок</a>
-    <br><a href="#task4">Задача D. Место олимпиады</a>
-    <br><a href="#task5">Задача E. Интересное соотношение</a>
-    <br><a href="#task6">Задача F. Игорь и гора</a>
-    <br><a href="#task7">Задача G. Глеб и гребля</a>
-  </p>
+      <a href="#task1">Задача A. Дата олимпиады</a>
+  <br><a href="#task2">Задача B. Командная тренировка</a>
+  <br><a href="#task3">Задача C. Кодовый замок</a>
+  <br><a href="#task4">Задача D. Место олимпиады</a>
+  <br><a href="#task5">Задача E. Интересное соотношение</a>
+  <br><a href="#task6">Задача F. Игорь и гора</a>
+  <br><a href="#task7">Задача G. Глеб и гребля</a>
 </article>
 
 
