--- a/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2094" target="_blank">Codeforces Round 1017 (Div.4) 2025-04-13</a></p>
+  <a href="https://codeforces.com/contest/2094" target="_blank">Codeforces Round 1017 (Div.4) 2025-04-13</a>
 </article>
 
 
@@ -10,15 +7,13 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Триппи Троппи</a>
-    <br><a href="#task2">Задача B. Бобритто Бандито</a>
-    <br><a href="#task3">Задача C. Брр Бррр Патапим</a>
-    <br><a href="#task4">Задача D. Тунг Тунг Сахур</a>
-    <br><a href="#task5">Задача E. Бонэка Амбалабу</a>
-    <br><a href="#task6">Задача F. Трулимэро Труличина</a>
-    <br><a href="#task7">Задача G. Шимпанзини Бананини</a>
-  </p>
+      <a href="#task1">Задача A. Триппи Троппи</a>
+  <br><a href="#task2">Задача B. Бобритто Бандито</a>
+  <br><a href="#task3">Задача C. Брр Бррр Патапим</a>
+  <br><a href="#task4">Задача D. Тунг Тунг Сахур</a>
+  <br><a href="#task5">Задача E. Бонэка Амбалабу</a>
+  <br><a href="#task6">Задача F. Трулимэро Труличина</a>
+  <br><a href="#task7">Задача G. Шимпанзини Бананини</a>
 </article>
 
 
