--- a/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2106" target="_blank">Codeforces Round 1020 (Div.3) 2025-04-24</a></p>
+  <a href="https://codeforces.com/contest/2106" target="_blank">Codeforces Round 1020 (Div.3) 2025-04-24</a>
 </article>
 
 
@@ -10,16 +7,14 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Доктор ТС</a>
-    <br><a href="#task2">Задача B. Св. Хрома</a>
-    <br><a href="#task3">Задача C. Черри Бомб</a>
-    <br><a href="#task4">Задача D. Цветочный мальчик</a>
-    <br><a href="#task5">Задача E. Волк</a>
-    <br><a href="#task6">Задача F. Гоблин</a>
-    <br><a href="#task7">Задача G1. Бодлер (простая версия)</a>
-    <br><a href="#task8">Задача G2. Бодлер (сложная версия)</a>
-  </p>
+      <a href="#task1">Задача A. Доктор ТС</a>
+  <br><a href="#task2">Задача B. Св. Хрома</a>
+  <br><a href="#task3">Задача C. Черри Бомб</a>
+  <br><a href="#task4">Задача D. Цветочный мальчик</a>
+  <br><a href="#task5">Задача E. Волк</a>
+  <br><a href="#task6">Задача F. Гоблин</a>
+  <br><a href="#task7">Задача G1. Бодлер (простая версия)</a>
+  <br><a href="#task8">Задача G2. Бодлер (сложная версия)</a>
 </article>
 
 
