--- a/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
@@ -1,8 +1,5 @@
 <article class="article">
-  <strong>Спортивное программирование в ЯрГУ</strong>
-  <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contests" target="_blank">ЯрГУ. Кружок. Контесты</a></p>
-  <p>Автор кружка Игорь Маслеников</p>
-  <p><a href="https://codeforces.com/contest/2121" target="_blank">Codeforces Round 1032 (Div.3) 2025-06-17</a></p>
+  <a href="https://codeforces.com/contest/2121" target="_blank">Codeforces Round 1032 (Div.3) 2025-06-17</a>
 </article>
 
 
@@ -10,16 +7,14 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p>
-        <a href="#task1">Задача A. Письмо домой</a>
-    <br><a href="#task2">Задача B. Выше облаков</a>
-    <br><a href="#task3">Задача C. Тем, кто с нами</a>
-    <br><a href="#task4">Задача D. 1709</a>
-    <br><a href="#task5">Задача E. Спонсор твоих проблем</a>
-    <br><a href="#task6">Задача F. Ямакаси</a>
-    <br><a href="#task7">Задача G. Гэнгста</a>
-    <br><a href="#task8">Задача H. Ice Baby</a>
-  </p>
+      <a href="#task1">Задача A. Письмо домой</a>
+  <br><a href="#task2">Задача B. Выше облаков</a>
+  <br><a href="#task3">Задача C. Тем, кто с нами</a>
+  <br><a href="#task4">Задача D. 1709</a>
+  <br><a href="#task5">Задача E. Спонсор твоих проблем</a>
+  <br><a href="#task6">Задача F. Ямакаси</a>
+  <br><a href="#task7">Задача G. Гэнгста</a>
+  <br><a href="#task8">Задача H. Ice Baby</a>
 </article>
 
 
